Cards + config updates for Microservices

--- a/loans/pom.xml
+++ b/loans/pom.xml
@@ -80,12 +80,25 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<image>
+						<name>mrlearn/${project.artifactId}:v1.0</name>
+					</image>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.3.2</version>
+				<configuration>
+					<to>
+						<image>mrlearn/${project.artifactId}:v1.2</image>
+					</to>
 				</configuration>
 			</plugin>
 		</plugins>
