--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 9000
 spring:
+  application:
+    name: "cards"
+  profiles:
+    active: "prod"
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
@@ -14,3 +18,25 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+# Config server address for app to contact
+# This URL will be used to contact config server to request for latest config from git
+# This is initiated on MS startup by the spring cloud config client dependency present in the app MS
+# Works based on two props -> application name, profiles active
+  config:
+    import: "optional:configserver:http://localhost:8071/"
+# Config details to connect to rabbit messaging queue
+  rabbitmq:
+    host: "localhost"
+    port: 5672
+    username: "guest"
+    password: "guest"
+# management API endpoints are specific endpoints provided by spring and
+# utilized via actuator which exposes them for use.
+# One function is to perform refresh of configuration read from git post a change
+# without having to restart the microservice
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
