--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -6,22 +6,19 @@ spring:
   profiles:
     active: "prod"
   datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://localhost:3306/accountsdb
+    username: root
+    password: root
+# Here we ensure that the sql table scripts are always initialized on startup
+  sql:
+    init:
+      mode: always
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update
     show-sql: true
-#  Config server address for app to contactO
+# Config server address for app to contactO
   config:
     import: "optional:configserver:http://localhost:8071/"
-#config details to connect to rabbit messaging queue
+# Config details to connect to rabbit messaging queue
   rabbitmq:
     host: "localhost"
     port: 5672
