--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -63,8 +63,8 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -103,7 +103,7 @@
 				<version>3.4.5</version>
 				<configuration>
 					<to>
-						<image>mrlearn/${project.artifactId}:v1.3</image>
+						<image>mrlearn/${project.artifactId}:v1.4</image>
 					</to>
 				</configuration>
 			</plugin>
