--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -6,17 +6,14 @@ spring:
   profiles:
     active: "prod"
   datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://localhost:3308/cardsdb
+    username: root
+    password: root
+# Here we ensure that the sql table scripts are always initialized on startup
+  sql:
+    init:
+      mode: always
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update
     show-sql: true
 # Config server address for app to contact
 # This URL will be used to contact config server to request for latest config from git
