--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -6,19 +6,19 @@ spring:
   profiles:
     active: "prod"
   datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://localhost:3307/loansdb
+    username: root
+    password: root
+# Here we ensure that the sql table scripts are always initialized on startup
+  sql:
+    init:
+      mode: always
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update
     show-sql: true
 # Config server address for app to contact
+# This URL will be used to contact config server to request for latest config from git
+# This is initiated on MS startup by the spring cloud config client dependency present in the app MS
+# Works based on two props -> application name, profiles active
   config:
     import: "optional:configserver:http://localhost:8071/"
 # Config details to connect to rabbit messaging queue
