--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -34,5 +34,40 @@ management:
     web:
       exposure:
         include: "*"
+#  enable acutator to expose info url
+  info:
+    env:
+      enabled: true
+# enable shutdown url of microservice
+  endpoint:
+    shutdown:
+      access: unrestricted
 
+
+# enable shutdown mechanism
+endpoints:
+  shutdown:
+    enabled: true
+
+# eureka props
+eureka:
+  instance:
+# This property defines this microservice dynamically wrt Ip address when comms with other ms
+# Since this is not localhost but rather the accounts microservice instance that we are referring here
+    preferIpAddress: true
+  client:
+# We require registry details of all microservices for comms
+    fetchRegistry : true
+# We need this ms instance to be registered with discovery
+    registerWithEureka: true
+# Default url for eureka connections , can refer the same in eurekaserver config
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka
+
+# desc info to be exposed via actuator endpoint to distinguish other microservices
+info:
+  app:
+    name: "accounts"
+    description: "BankEasy microservice for customer accounts"
+    version: "1.0.0"
 
