--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -44,6 +44,15 @@ management:
   endpoint:
     shutdown:
       access: unrestricted
+    health:
+      probes:
+        enabled: true
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
+      enabled: true
+
 # enable shutdown mechanism
 endpoints:
   shutdown:
@@ -70,3 +79,10 @@ info:
     name: "loans"
     description: "BankEasy microservice for customer loans"
     version: "1.0.0"
+
+# activate debug logging
+logging:
+  level:
+    com:
+      bankeasy:
+        loans: DEBUG
