--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -34,17 +34,22 @@ services:
       service: microservice-db-configuration
 
   accounts:
-    image: "mrlearn/accounts:v1.5"
+    image: "mrlearn/accounts:v1.6"
     container_name: accounts-ms
     ports:
       - "8080:8080"
+#   props to define health check test for accounts using curl cmd
+    healthcheck:
+      test: "curl --fail -silent http://localhost:8080/actuator/health | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
 #   define the dependency for this MS to start
     depends_on:
       configserver:
         condition: service_healthy
       accountsdb:
-        condition: service_healthy
-      eurekaserver:
         condition: service_healthy
     extends:
       file: common-config.yml
@@ -56,17 +61,22 @@ services:
       SPRING_APPLICATION_NAME: "accounts"
 
   loans:
-    image: "mrlearn/loans:v1.5"
+    image: "mrlearn/loans:v1.6"
     container_name: loans-ms
     ports:
       - "8090:8090"
+#   props to define health check test for loans using curl cmd
+    healthcheck:
+      test: "curl --fail -silent http://localhost:8090/actuator/health | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
 #   define the dependency for this MS to start
     depends_on:
       configserver:
         condition: service_healthy
       loansdb:
-        condition: service_healthy
-      eurekaserver:
         condition: service_healthy
     extends:
       file: common-config.yml
@@ -78,17 +88,22 @@ services:
       SPRING_APPLICATION_NAME: "loans"
 
   loans1:
-    image: "mrlearn/loans:v1.5"
+    image: "mrlearn/loans:v1.6"
     container_name: loans-ms1
     ports:
       - "8091:8090"
-    #   define the dependency for this MS to start
+#   props to define health check test for loans using curl cmd
+    healthcheck:
+      test: "curl --fail -silent http://localhost:8091/actuator/health | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+#   define the dependency for this MS to start
     depends_on:
       configserver:
         condition: service_healthy
       loansdb:
-        condition: service_healthy
-      eurekaserver:
         condition: service_healthy
     extends:
       file: common-config.yml
@@ -98,19 +113,24 @@ services:
       #   This is the jdbc URL we override from the application.yml of the application ms
       SPRING_DATASOURCE_URL: jdbc:mysql://loansdb:3306/loansdb
       SPRING_APPLICATION_NAME: "loans"
-      
+
   cards:
-    image: "mrlearn/cards:v1.5"
+    image: "mrlearn/cards:v1.6"
     container_name: cards-ms
     ports:
       - "9000:9000"
+#   props to define health check test for cards using curl cmd
+    healthcheck:
+      test: "curl --fail -silent http://localhost:9000/actuator/health | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
 #   define the dependency for this MS to start
     depends_on:
       configserver:
         condition: service_healthy
       cardsdb:
-        condition: service_healthy
-      eurekaserver:
         condition: service_healthy
     extends:
       file: common-config.yml
@@ -164,6 +184,36 @@ services:
 #  Hence, we define a spring application name
     environment:
       SPRING_APPLICATION_NAME: eurekaserver
+
+  gatewayserver:
+    image: "mrlearn/gatewayserver:v1.6"
+    container_name: gatewayserver-ms
+    ports:
+      - "8072:8072"
+    #   props to define health check test for eureka server using curl cmd
+    healthcheck:
+      test: "curl --fail -silent http://localhost:8072/actuator/health | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    depends_on:
+      accounts:
+        condition: service_healthy
+      loans:
+        condition: service_healthy
+      cards:
+        condition: service_healthy
+      rabbit:
+        condition: service_healthy
+      configserver:
+        condition: service_healthy
+    extends:
+      file: common-config.yml
+      service: microservice-eurekaserver-config
+# spring name for other spring apps to identify and communicate with
+    environment:
+      SPRING_APPLICATION_NAME: gatewayserver
 
   rabbit:
 # rabbit requires specifc defined props based on docs
