--- a/docker-compose/prod/docker-compose.yml
+++ b/docker-compose/prod/docker-compose.yml
@@ -19,9 +19,9 @@ services:
       file: common-config.yml
       service: microservice-db-configuration
 
-# note: for all app modules to talk to oracle via JSBC, internal network is to be used amongs
-# containers in their own network
-# The external ports are only for external apps such as SQLECTRON to connect to.
+  # note: for all app modules to talk to oracle via JSBC, internal network is to be used amongs
+  # containers in their own network
+  # The external ports are only for external apps such as SQLECTRON to connect to.
 
   cardsdb:
     container_name: cardsdb
@@ -34,68 +34,110 @@ services:
       service: microservice-db-configuration
 
   accounts:
-    image: "mrlearn/accounts:v1.5"
+    image: "mrlearn/accounts:v1.6"
     container_name: accounts-ms
     ports:
       - "8080:8080"
-#   define the dependency for this MS to start
+    #   props to define health check test for accounts using curl cmd
+    healthcheck:
+      test: "curl --fail -silent http://localhost:8080/actuator/health | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    #   define the dependency for this MS to start
     depends_on:
       configserver:
         condition: service_healthy
       accountsdb:
         condition: service_healthy
-      eurekaserver:
-        condition: service_healthy
     extends:
       file: common-config.yml
       service: microservice-eurekaserver-config
-#   variables for the application to use to communicate with config server
+    #   variables for the application to use to communicate with config server
     environment:
-#   This is the jdbc URL we override from the application.yml of the application ms
+      #   This is the jdbc URL we override from the application.yml of the application ms
       SPRING_DATASOURCE_URL: jdbc:mysql://accountsdb:3306/accountsdb
       SPRING_APPLICATION_NAME: "accounts"
 
   loans:
-    image: "mrlearn/loans:v1.5"
+    image: "mrlearn/loans:v1.6"
     container_name: loans-ms
     ports:
       - "8090:8090"
-#   define the dependency for this MS to start
+    #   props to define health check test for loans using curl cmd
+    healthcheck:
+      test: "curl --fail -silent http://localhost:8090/actuator/health | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    #   define the dependency for this MS to start
     depends_on:
       configserver:
         condition: service_healthy
       loansdb:
         condition: service_healthy
-      eurekaserver:
+    extends:
+      file: common-config.yml
+      service: microservice-eurekaserver-config
+    #   variables for the application to use to communicate with config server
+    environment:
+      #   This is the jdbc URL we override from the application.yml of the application ms
+      SPRING_DATASOURCE_URL: jdbc:mysql://loansdb:3306/loansdb
+      SPRING_APPLICATION_NAME: "loans"
+
+  loans1:
+    image: "mrlearn/loans:v1.6"
+    container_name: loans-ms1
+    ports:
+      - "8091:8090"
+    #   props to define health check test for loans using curl cmd
+    healthcheck:
+      test: "curl --fail -silent http://localhost:8091/actuator/health | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    #   define the dependency for this MS to start
+    depends_on:
+      configserver:
+        condition: service_healthy
+      loansdb:
         condition: service_healthy
     extends:
       file: common-config.yml
       service: microservice-eurekaserver-config
-#   variables for the application to use to communicate with config server
+    #   variables for the application to use to communicate with config server
     environment:
-#   This is the jdbc URL we override from the application.yml of the application ms
+      #   This is the jdbc URL we override from the application.yml of the application ms
       SPRING_DATASOURCE_URL: jdbc:mysql://loansdb:3306/loansdb
       SPRING_APPLICATION_NAME: "loans"
 
   cards:
-    image: "mrlearn/cards:v1.5"
+    image: "mrlearn/cards:v1.6"
     container_name: cards-ms
     ports:
       - "9000:9000"
-#   define the dependency for this MS to start
+    #   props to define health check test for cards using curl cmd
+    healthcheck:
+      test: "curl --fail -silent http://localhost:9000/actuator/health | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    #   define the dependency for this MS to start
     depends_on:
       configserver:
         condition: service_healthy
       cardsdb:
         condition: service_healthy
-      eurekaserver:
-        condition: service_healthy
     extends:
       file: common-config.yml
       service: microservice-eurekaserver-config
-#   variables for the application to use to communicate with config server within docker network
+    #   variables for the application to use to communicate with config server within docker network
     environment:
-#   This is the jdbc URL we override from the application.yml of the application ms
+      #   This is the jdbc URL we override from the application.yml of the application ms
       SPRING_DATASOURCE_URL: jdbc:mysql://cardsdb:3306/cardsdb
       SPRING_APPLICATION_NAME: "cards"
 
@@ -104,7 +146,7 @@ services:
     container_name: configserver-ms
     ports:
       - "8071:8071"
-#   props to define health check test for config server using curl cmd
+    #   props to define health check test for config server using curl cmd
     healthcheck:
       test: "curl --fail -silent http://localhost:8071/actuator/health | grep UP || exit 1"
       interval: 10s
@@ -119,11 +161,11 @@ services:
       service: microservice-deploy-config
 
   eurekaserver:
-    image: "mrlearn/configserver:v1.5"
+    image: "mrlearn/eurekaserver:v1.5"
     container_name: eurekaserver-ms
     ports:
       - "8070:8070"
-#   props to define health check test for config server using curl cmd
+    #   props to define health check test for eureka server using curl cmd
     healthcheck:
       test: "curl --fail -silent http://localhost:8070/actuator/health | grep UP || exit 1"
       interval: 10s
@@ -138,13 +180,43 @@ services:
     extends:
       file: common-config.yml
       service: microservice-configserver-config
-#  eurekaserver is the central registry for microservices to register and discover others.
-#  Hence, we define a spring application name
+    #  eurekaserver is the central registry for microservices to register and discover others.
+    #  Hence, we define a spring application name
     environment:
       SPRING_APPLICATION_NAME: eurekaserver
 
+  gatewayserver:
+    image: "mrlearn/gatewayserver:v1.6"
+    container_name: gatewayserver-ms
+    ports:
+      - "8072:8072"
+    #   props to define health check test for eureka server using curl cmd
+    healthcheck:
+      test: "curl --fail -silent http://localhost:8072/actuator/health | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    depends_on:
+      accounts:
+        condition: service_healthy
+      loans:
+        condition: service_healthy
+      cards:
+        condition: service_healthy
+      rabbit:
+        condition: service_healthy
+      configserver:
+        condition: service_healthy
+    extends:
+      file: common-config.yml
+      service: microservice-eurekaserver-config
+    # spring name for other spring apps to identify and communicate with
+    environment:
+      SPRING_APPLICATION_NAME: gatewayserver
+
   rabbit:
-# rabbit requires specifc defined props based on docs
+    # rabbit requires specifc defined props based on docs
     image: "rabbitmq:3.12-management"
     hostname: rabbitmq
     ports:
