--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -24,7 +24,11 @@ spring:
     port: 5672
     username: "guest"
     password: "guest"
-
+# Config details for circuitbreaker to work for openfeign in accounts
+  cloud:
+    openfeign:
+      circuitbreaker:
+        enabled: true
 # management API endpoints are specific endpoints provided by spring and
 # utilized via actuator which exposes them for use.
 # One function is to perform refresh of configuration read from git post a change
@@ -86,5 +90,35 @@ logging:
       bankEasy:
         accounts: DEBUG
 
+# Config details for circuit breaker to function
+resilience4j.circuitbreaker:
+  configs:
+    default:
+      # call amount to be monitored before status is changed from closed to open
+      slidingWindowSize: 10
+      permittedNumberOfCallsInHalfOpenState: 2
+      failureRateThreshold: 50
+      waitDurationInOpenState: 10000
+
+# Config details for retry mechanism to function
+resilience4j.retry:
+  configs:
+    default:
+      maxAttempts: 3
+      waitDuration: 500
+      enableExponentialBackoff: true
+      exponentialBackoffMultiplier: 2
+# Config for retry to occur on specific conditions and ignore certain exceptions
+      ignoreExceptions:
+        - java.lang.NullPointerException
+      retryExceptions:
+          - java.util.concurrent.TimeoutException
+# Config for ratelimiting via resilience4j
+resilience4j.ratelimiter:
+  configs:
+    default:
+      timeoutDuration: 1000
+      limitRefreshPeriod: 5000
+      limitForPeriod: 1
 
 
