--- a/docker-compose/qa/docker-compose.yml
+++ b/docker-compose/qa/docker-compose.yml
@@ -1,4 +1,19 @@
 services:
+  redis:
+    container_name: redis
+    ports:
+      - "6379:6379"
+    #   props to define health check test for accounts using curl cmd
+    healthcheck:
+      #   refer docs for the right health checks
+      test: ["CMD-SHELL","redis-cli-ping | grep PONG"]
+      timeout: 10s
+      retries: 10
+      start_period: 10s
+    extends:
+      file: common-config.yml
+      service: microservice-db-configuration
+
   accountsdb:
     container_name: accountsdb
     ports:
@@ -34,7 +49,7 @@ services:
       service: microservice-db-configuration
 
   accounts:
-    image: "mrlearn/accounts:v1.6"
+    image: "mrlearn/accounts:v1.7"
     container_name: accounts-ms
     ports:
       - "8080:8080"
@@ -61,7 +76,7 @@ services:
       SPRING_APPLICATION_NAME: "accounts"
 
   loans:
-    image: "mrlearn/loans:v1.6"
+    image: "mrlearn/loans:v1.7"
     container_name: loans-ms
     ports:
       - "8090:8090"
@@ -88,7 +103,7 @@ services:
       SPRING_APPLICATION_NAME: "loans"
 
   loans1:
-    image: "mrlearn/loans:v1.6"
+    image: "mrlearn/loans:v1.7"
     container_name: loans-ms1
     ports:
       - "8091:8090"
@@ -115,7 +130,7 @@ services:
       SPRING_APPLICATION_NAME: "loans"
 
   cards:
-    image: "mrlearn/cards:v1.6"
+    image: "mrlearn/cards:v1.7"
     container_name: cards-ms
     ports:
       - "9000:9000"
@@ -142,7 +157,7 @@ services:
       SPRING_APPLICATION_NAME: "cards"
 
   configserver:
-    image: "mrlearn/configserver:v1.5"
+    image: "mrlearn/configserver:v1.7"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -161,7 +176,7 @@ services:
       service: microservice-deploy-config
 
   eurekaserver:
-    image: "mrlearn/eurekaserver:v1.5"
+    image: "mrlearn/eurekaserver:v1.7"
     container_name: eurekaserver-ms
     ports:
       - "8070:8070"
@@ -186,7 +201,7 @@ services:
       SPRING_APPLICATION_NAME: eurekaserver
 
   gatewayserver:
-    image: "mrlearn/gatewayserver:v1.6"
+    image: "mrlearn/gatewayserver:v1.7"
     container_name: gatewayserver-ms
     ports:
       - "8072:8072"
@@ -208,13 +223,18 @@ services:
         condition: service_healthy
       configserver:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     extends:
       file: common-config.yml
       service: microservice-eurekaserver-config
     # spring name for other spring apps to identify and communicate with
     environment:
       SPRING_APPLICATION_NAME: gatewayserver
-
+      SPRING_DATA_REDIS_CONNECT_TIMEOUT: 2s
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+      SPRING_DATA_REDIS_TIMEOUT: 1s
   rabbit:
     # rabbit requires specifc defined props based on docs
     image: "rabbitmq:3.12-management"
