--- a/loans/pom.xml
+++ b/loans/pom.xml
@@ -87,6 +87,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 	</dependencies>
@@ -110,7 +114,7 @@
 				<version>3.4.5</version>
 				<configuration>
 					<to>
-						<image>mrlearn/${project.artifactId}:v1.6</image>
+						<image>mrlearn/${project.artifactId}:v1.7</image>
 					</to>
 				</configuration>
 			</plugin>
