--- a/docker-compose/prod/common-config.yml
+++ b/docker-compose/prod/common-config.yml
@@ -5,6 +5,7 @@ services:
     networks:
       - bankeasy
 
+
   microservice-deploy-config:
     extends:
       microservice-network-config
@@ -15,8 +16,17 @@ services:
     #   Now we will override the rabbit prop that is defined in the app.yml of each MS
     #   Although the docker compose file doesn't have properties relevant to rabbit for each MS
     environment:
-      #   override the hostname via the below prop as defined from docs
+    #   override the hostname via the below prop as defined from docs
       SPRING_RABBITMQ_HOST: "rabbit"
+    #   jar / java agent that peers into JVM and performs at runtime telemetry operations
+      JAVA_TOOL_OPTIONS: "-javaagent:/app/libs/opentelemetry-javaagent-1.32.0.jar"
+    #   data endpoint to which java agent pushes the trace information
+    #   otel uses 4318 for http connection , 4317 for gRPC
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://tempo:4317
+    #   since metric info is scraped via prometheus
+      OTEL_LOGS_EXPORTER: none
+      OTEL_EXPORTER_OTLP_PROTOCOL: grpc
+      OTEL_LOG_LEVEL: debug
 
   microservice-configserver-config:
     extends:
