--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -52,6 +52,10 @@ management:
       enabled: true
     liveness-state:
       enabled: true
+# Micrometer configuration to monitor app health
+  metrics:
+    logs:
+      application: ${spring.application.name}
 
 # enable shutdown mechanism
 endpoints:
@@ -86,5 +90,7 @@ logging:
     com:
       bankeasy:
         loans: DEBUG
-
+# log pattern for distributed tracing via open telemetry
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
 
